// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Security - Anticheat - ChallengeLogs Reducer Test append = false 1`] = `
Object {
  "challengeLogs": Array [
    3,
    4,
  ],
  "nextPageToken": "CAE",
  "selectedLog": undefined,
}
`;

exports[`Security - Anticheat - ChallengeLogs Reducer Test append = true 1`] = `
Object {
  "challengeLogs": Array [
    1,
    2,
    3,
    4,
  ],
  "nextPageToken": "CAE",
  "selectedLog": undefined,
}
`;

exports[`Security - Anticheat - ChallengeLogs Reducer handle SECURITY_CHALLENGE_LOGS_FETCH_SUCCESS: challengeLogs and nextPagetoken assignation 1`] = `
Object {
  "challengeLogs": Array [
    Object {
      "challengeId": "9896421084564179338",
      "connectionId": "11524973186985937416",
      "logId": "18293345908526280196",
      "logMessage": "log message (6812715122805060947)",
      "monitoredGroup": "custom_7",
      "monitoredGroupId": 9,
      "punished": 1,
      "response": "9223372036854775807",
      "responseStatus": "correct",
      "timestamp": 1529867269,
      "userId": "9666065021272857122",
      "userName": "HostUser",
    },
  ],
  "nextPageToken": "CAE",
  "selectedLog": undefined,
}
`;

exports[`Security - Anticheat - ChallengeLogs Reducer handle SECURITY_CHALLENGE_LOGS_FETCH_SUCCESS: empty results 1`] = `
Object {
  "challengeLogs": Array [],
  "nextPageToken": undefined,
  "selectedLog": undefined,
}
`;

exports[`Security - Anticheat - ChallengeLogs Reducer handle SECURITY_CHALLENGE_LOGS_LIST_ITEM_ONCLICK 1`] = `
Object {
  "challengeLogs": Array [],
  "nextPageToken": undefined,
  "selectedLog": Object {
    "challengeId": "9896421084564179338",
    "connectionId": "11524973186985937416",
    "logId": "18293345908526280196",
    "logMessage": "log message (6812715122805060947)",
    "monitoredGroup": "custom_7",
    "monitoredGroupId": 9,
    "punished": 1,
    "response": "9223372036854775807",
    "responseStatus": "correct",
    "timestamp": 1529867269,
    "userId": "9666065021272857122",
    "userName": "HostUser",
  },
}
`;

exports[`Security - Anticheat - ChallengeLogs Reducer return the initial state 1`] = `
Object {
  "challengeLogs": Array [],
  "nextPageToken": undefined,
  "selectedLog": undefined,
}
`;
